Fixed #35 leaderboard layout - keep space ratio and truncate text

--- a/src/io/reflection/app/client/res/reflection.css
+++ b/src/io/reflection/app/client/res/reflection.css
@@ -303,10 +303,6 @@ a:hover,a:focus,a:active {
 	color: #1bc79f;
 }
 
-.breakWords {
-	word-wrap: break-word;
-}
-
 .pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus
 	{
 	background-color: #6D69C5;
